feature: tx-service-group配置

--- a/seata-account-service/src/main/resources/application.yml
+++ b/seata-account-service/src/main/resources/application.yml
@@ -59,5 +59,6 @@ seata:
       password: nacos
     type: nacos
   data-source-proxy-mode: AT
-#  tx-service-group: scorpios_tx_group
+  tx-service-group: default_tx_group
+
 
