--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
             <version>2022.0.0.0</version>
+            <!-- <version>2021.1</version> -->
             <exclusions>
                 <exclusion>
                     <groupId>io.seata</groupId>
